# AnvilBE

./: .gitignore  README.md  main.py  pyproject.toml  version.yaml
.github/workflows/: build-manual.yml  build.yml  linux.yml  macos.yml  windows.yml
_Ref/: .gitignore  AutoBE.spec  AutoBE_linux.spec  AutoSetup.iss  LICENCE.TXT  MUSIC_CREDITS.txt  SignAutoBeFiles.bat  build_exe.bat  build_installer.bat  build_with_obfuscation.bat  generate_autobe_keys.py  requirements.txt  run_signtool_installer.bat  version_info.txt
_Ref/extendedbe/: __init__.py  excel_manager.py  fix_lang_comments.py  fix_missing_block_definitions.py  fix_missing_item_definitions.py  fix_missing_recipe_identifier.py  universal_compatibility.py
_Ref/locales/: id.json  ru.json
_Ref/music/: README.txt
_Split/: AutoBE_mainref.py  split_autobe.py
_Split/AutoBE/: AutoBE_defs_01.py  AutoBE_defs_02.py  AutoBE_defs_03.py  AutoBE_defs_04.py  AutoBE_defs_05.py  AutoBE_defs_06.py  AutoBE_defs_07.py  AutoBE_defs_08.py  AutoBE_defs_09.py  AutoBE_defs_10.py  AutoBE_defs_11.py  AutoBE_defs_12.py  AutoBE_defs_13.py  AutoBE_defs_14.py  AutoBE_defs_15.py  AutoBE_defs_16.py  AutoBE_defs_17.py  AutoBE_defs_18.py  AutoBE_footing.py  AutoBE_topping.py
_Split/extendedbe/: fix_empty_json_files.py  fix_empty_run_commands.py  fix_misplaced_animation_controllers.py  fix_old_item_format.py  fix_stub_animation_controllers.py
locales/: en.json  es.json  id.json  pt.json  ru.json  tos_en.txt  tos_es.txt  zh.json
resources/: help_content_id.html
src/: app.py
src/core/: file_utils.py  i18n.py  identifier_manager.py  (+2 more)
(+31 files in other folders)
