[project]
name = "anvil-mc"
version = "0.1.0b0"
description = "Minecraft Bedrock Edition Addon Merger — merge behavior & resource packs with intelligent conflict resolution"
authors = [
    { name = "Anvil-MC Contributors" },
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PySide6>=6.6.0",
    "json5>=0.9.14",
    "Pillow>=10.0.0",
]

[project.scripts]
anvil-mc = "main:main"

[tool.uv.sources]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"
